syntax = "proto3";

option go_package =".;protos";

message Login{
  int32 id = 1;
  string name = 2;
};
message LoginResponse{
  int32 err = 1;
}

message Logout{
  int32 id = 1;
}
message LogoutResponse{
  int32 err = 1;
}

message Chat{
  string content=1;
}
message ChatResponse{
  int32 err = 1;
}